@@ -6,6 +6,7 @@
 * Can now determine state of :onlyif fields.  Requested by Ole Rasmussen.
 * Renamed #offset to #abs_offset for clarity.  #offset is now deprecated.
 * Support :byte_align for fields in structs.  Requested by Igor Yamolov.
+* Added bit fields with dynamic length.  Requested by Jacob Dam.
 
 == Version 1.8.2 (2014-02-02)
 
